# city_expansion_sim

./: .dockerignore  .gitignore  AGENTS.md  TODO.md  docker_setup.txt  github_workflows_docker.txt  package-lock.json  package.json  readme.md  repo_structure.md
.agents/ralph/: PROMPT_build.md  config.sh  loop.sh
.agents/ralph/references/: CONTEXT_ENGINEERING.md  GUARDRAILS.md
.agents/roles/: product-ceo.md  security-specialist.md
.agents/tasks/: prd-city-expansion-sim.json
.prstack/: project.env
backend/: README.md  pyproject.toml  run.py
backend/app/: __init__.py  server.py  store.py
backend/tests/: test_api.py
docs/: architecture.md  gstack-adaptation.md  inspirations.md  orchestration.md  prstack-extraction-plan.md  rebuild_plan.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  styles.css
legacy/: chennai_abm_ca_hybrid.py  chennai_expansion_model.py  flask_backend_server.py  urban_sim_frontend.jsx
ops/prstack/: README.md
ops/prstack/state/: current-slice.md  mission.md  tasks.md
ops/prstack/state/reports/: ceo-review.md  handoff.md  qa.md  review.md  security-review.md  ship.md
ops/prstack/templates/: ceo-review.md  current-slice.md  handoff.md  qa.md  review.md  security-review.md  tasks.md
shared/: README.md  command.schema.json  scenario.schema.json  snapshot.schema.json
simulation/: README.md
simulation/campaigns/: southern_growth_arc.json
simulation/core/: __init__.py  engine.py
simulation/scenarios/: chennai_coastal_corridor.json  metro_delta_arc.json
