[project]
name = "city-expansion-sim-backend"
version = "0.1.0"
description = "Backend API and deterministic simulation runtime for City Expansion Sim."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
